--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "version": "1.0.0",
   "author": "Lee Khang <lekhang2512@gmail.com>",
   "license": "MIT",
-  "private": true,
   "main": "src/main.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lekhang2512/vue-image-lightbox-carousel"
   },
   "dependencies": {
     "vue": "^2.5.11",
